MPS-39635: EditorComponent uses UiDataProvider